# gpt-rag-orchestrator

./: .dockerignore  .env.sample  .gitattributes  .gitignore  .image-tag.txt  .pr-body.md  .release-notes.md  404.html  AGENTS.md  CHANGELOG.md  DOCUMENT_CHAT_WORKFLOW.md  Dockerfile  GEMINI.md  LOADTEST.md  README.md  VERSION  azure.yaml  db_table_info.txt  function_app.py  host.json  index.html  launch.json  local.settings copy.json  local.settings.json.template  local.settings1.json  mkdocs.yml  pyproject.toml  requirements.txt  revision_status.txt.bak  setup.py  test.py  test_agentic_retrieval.sh  test_stream.py
.azure/: deployment-plan.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md  copilot_instructions.md  dependabot.yml
checkuser/: __init__.py  function.json
contracts/: audit-event-v1.application-insights.schema.json  audit-event-v1.schema.json  audit-event-v1.sha256
conversations/: __init__.py  function.json
dataset/: chat_eval_data.jsonl  golden-dataset.jsonl
docs/: FOLDER_STRUCTURE.md  LOADTEST.md  LOCAL_DEPLOYMENT.md  NL2SQL.md  REPORT_WORKER_DURABLE.md  benchmark_results.md  nl2sql_strategy.md  pull_request_template.md
entities/: rate_limiter_entity.py
evaluations/: README.md  appconfig.py  config.py  evaluate.ps1  evaluate.py  evaluate.sh  generate_eval_input.py  keyvault.py  requirements.txt
feedback/: __init__.py
financial-orc/: __init__.py  orchestrator.py
financial_orc/: __init__.py  orchestrator.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
html_to_pdf_converter/: __init__.py
(+376 files in other folders)
